--- a/angular/src/app/components/templates/products/products.component.css
+++ b/angular/src/app/components/templates/products/products.component.css
@@ -1,12 +1,11 @@
-.card {
+.mat-card{
     height: 100%;
 }
-
-div.cta{
-    padding: 20px;
-}
-
 button {
     margin: 0 12px;
     min-width: 75px;
+}
+
+.mat-card-header .mat-card-title {
+    margin-top:20px;
 }
