--- a/angular/src/app/components/templates/products/products.component.html
+++ b/angular/src/app/components/templates/products/products.component.html
@@ -1,17 +1,20 @@
 
     <div class="row row-cols-1 row-cols-md-3 g-4">
         <div class="col"  *ngFor="let product of products">
-          <div class="card">
-            <img src="{{ product.img }}" class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">{{ product.name }}</h5>
-              <p class="card-text">{{ product.details }}</p>
-            </div>
-            <div class="cta d-flex justify-content-center">
+          <mat-card class="card">
+            <a [routerLink]="['/product', product.id]">
+              <img src="{{ product.img }}" class="card-img-top" alt="...">     
+              <mat-card-header>              
+                <mat-card-title>{{ product.name }}</mat-card-title>
+              </mat-card-header> 
+            </a>       
+            <mat-card-content>
+              {{ product.details }}
+            </mat-card-content>
+            <mat-card-actions>
               <button (click)="buy()" class="btn btn-primary">Acheter</button>
-              <button (click)="view()" class="btn btn-primary">Voir</button>
-            </div>
-          </div>
+            </mat-card-actions>
+          </mat-card>
         </div>
     </div>
 
