--- a/angular/src/app/components/templates/product/product.component.html
+++ b/angular/src/app/components/templates/product/product.component.html
@@ -3,20 +3,17 @@
     <p class="fs-5 text-muted">{{product.details}}</p>
   </div>
 <div class="row row-cols-1 row-cols-md-3 mb-3 text-center d-flex flex-wrap-no-wrap">
-    <div class="col" *ngFor="let offer of product.offers">
+    <div class="col" *ngFor="let offer of offers">
       <div class="card mb-4 rounded-3 shadow-sm">
         <div class="card-header py-3">
           <h4 class="my-0 fw-normal">{{offer.name}}</h4>
         </div>
         <div class="card-body">
           <h4 class="card-title pricing-card-title">{{offer.persons}} persons</h4>
-          <ul class="list-unstyled mt-3 mb-4">
-            <li>10 users included</li>
-            <li>2 GB of storage</li>
-            <li>Email support</li>
-            <li>Help center access</li>
+          <ul class="list-unstyled mt-3 mb-4" *ngFor="let tag of offer.tags">
+            <li>{{ tag }}</li>
           </ul>
-          <button type="button" class="w-100 btn btn-lg btn-outline-primary">${{offer.price}}</button>
+          <button (click)="addToCart()" type="button" class="w-100 btn btn-lg btn-outline-primary">${{offer.price}}</button>
         </div>
       </div>
     </div>
