--- a/angular/src/app/components/templates/products/products.component.html
+++ b/angular/src/app/components/templates/products/products.component.html
@@ -2,7 +2,7 @@
     <div class="row row-cols-1 row-cols-md-3 g-4">
         <div class="col"  *ngFor="let product of products">
           <mat-card class="card">
-            <a [routerLink]="['/product', product.id]">
+            <a [routerLink]="['/product', product.id_product]">
               <img src="{{ product.img }}" class="card-img-top" alt="...">     
               <mat-card-header>              
                 <mat-card-title>{{ product.name }}</mat-card-title>
@@ -12,7 +12,7 @@
               {{ product.details }}
             </mat-card-content>
             <mat-card-actions>
-              <button (click)="buy()" class="btn btn-primary">Acheter</button>
+              <button (click)="buy()" class="btn btn-primary">Commander</button>
             </mat-card-actions>
           </mat-card>
         </div>
