Add cart and login :w

--- a/angular/src/app/components/organisms/header/header.component.html
+++ b/angular/src/app/components/organisms/header/header.component.html
@@ -14,17 +14,13 @@
       </li>
       <li class="header__menu__item nav-item">
         <a href="#section0" class="nav-link text-uppercase font-weight-bold js-scroll-trigger">
-          Home
+          My cart
         </a>
+        <app-cart></app-cart>
       </li>
       <li class="header__menu__item nav-item">
         <a href="#section0" class="nav-link text-uppercase font-weight-bold js-scroll-trigger">
-          Home
-        </a>
-      </li>
-      <li class="header__menu__item nav-item">
-        <a href="#section0" class="nav-link text-uppercase font-weight-bold js-scroll-trigger">
-          Home
+          My account
         </a>
       </li>
     </ul>
